<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reserva.ListarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/listar_reservas"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/list_view_listar_reserva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonCriarReserva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/criar_reserva" />

        <TextView
            android:id="@+id/listarReservaCriarCartaoAviso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aviso_criar_cartao"
            android:visibility="invisible" />
    </LinearLayout>
</FrameLayout>